--- a/style.css
+++ b/style.css
@@ -135,3 +135,12 @@ button {
   cursor: pointer;
   margin: .1em;
 }
+@media only screen and (max-width: 370px){
+  h1{
+    font-size: 3rem;
+  }
+
+  button{
+    font-size: 2rem;
+  }
+}
