--- a/style.css
+++ b/style.css
@@ -144,3 +144,13 @@ button {
     font-size: 2rem;
   }
 }
+
+@media only screen and (max-width: 223px){
+  h1{
+    font-size: 2rem;
+  }
+
+  button{
+    font-size: 1rem;
+  }
+}
